--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -6,7 +6,8 @@ code {
 
 body {
   margin: 0;
-  font-family: "Nunito", "Avenir", "Helvetica", "sans-serif";
+  /* font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Ubuntu; */
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -43,7 +44,7 @@ template {
 }
 a {
   font-style: normal;
-  color: hsla(0, 0%, 0%, 0.8);
+  color: var(--nord4);
   -webkit-text-decoration-skip: objects;
 }
 a:active,
@@ -614,7 +615,7 @@ h5::selection,
 h6::selection,
 p::selection,
 a::selection {
-  background: var(--nord15);
+  background: var(--nord2);
 }
 
 .gatsby-highlight {
