--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,13 +1,10 @@
-@import '../../node_modules/nord/src/sass/nord.css';
-
 code {
   background-color: hsla(0, 0%, 0%, 0.04);
 }
 
 body {
   margin: 0;
-  /* font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Ubuntu; */
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-family: "Nunito", "Avenir", "Helvetica", "sans-serif";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -44,7 +41,7 @@ template {
 }
 a {
   font-style: normal;
-  color: var(--nord4);
+  color: #a5acb9;
   -webkit-text-decoration-skip: objects;
 }
 a:active,
@@ -203,9 +200,8 @@ html {
   box-sizing: inherit;
 }
 body {
-  /* color: hsla(0, 0%, 0%, 0.8); */
-  color: var(--nord4);
-  background-color: var(--nord0);
+  color: #a5acb9;
+  background-color: #282c34;
   font-weight: normal;
   word-wrap: break-word;
   font-kerning: normal;
@@ -615,14 +611,12 @@ h5::selection,
 h6::selection,
 p::selection,
 a::selection {
-  background: var(--nord2);
-  padding: 1em;
-  border-radius: 10px;
+  background: #333a46;
+  /* background: #ededee; */
 }
 
-
 .gatsby-highlight {
-  background-color: #1d1f21;
+  background-color: #21252b;
   border-radius: 0.3em;
   margin: 0.5em 0;
   padding: 1em;
