--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -4,6 +4,8 @@ code {
 
 body {
   margin: 0;
+  padding: 0;
+  height: 100%;
   font-family: -apple-system, BlinkMacSystemFont, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
